# deepagents-geochemical

./: .gitignore  INTERVIEW.md  README.md  RESUME.md  pyproject.toml  reasonix.toml  requirements.txt
agent/: llm.py  main_agent.py
api/: server.py
exports/: export_20260704_141025_data.csv  export_20260704_141053_data.csv  export_20260704_141102_data.csv  export_20260704_141114_data.csv  export_20260704_141119_data.csv  export_20260704_141124_data.csv  export_20260704_141127_data.csv  export_20260704_142121_data.csv  export_20260704_142124_data.csv  export_20260704_142130_data.csv  export_20260704_144000_data.csv  export_20260704_144002_data.csv  export_20260704_144013_data.csv  export_20260704_144400_data.csv  export_20260704_144414_data.csv  export_20260704_144416_data.csv  export_20260704_144430_data.csv  export_20260704_144433_data.csv  export_20260704_144437_data.csv  export_20260704_144439_data.csv  export_20260704_144456_data.csv  export_20260704_144504_data.csv  export_20260704_144508_data.csv  export_20260704_144516_data.csv  export_20260704_144522_data.csv  export_20260704_144532_data.csv  export_20260704_144536_data.csv  export_20260704_144541_data.csv  export_20260704_144546_data.csv  export_20260704_144555_data.csv  export_20260704_144600_data.csv  export_20260704_144605_data.csv  export_20260704_144610_data.csv  export_20260704_144615_data.csv  export_20260704_144619_data.csv  export_20260704_144624_data.csv  export_20260704_144632_data.csv  export_20260704_144638_data.csv  export_20260704_144645_data.csv  export_20260704_144651_data.csv  (+3 more)
(+20 files in other folders)
